--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "skullomania-syntax",
   "theme": "syntax",
-  "version": "0.2.0",
-  "description": "A short description of your syntax theme",
+  "version": "0.2.1",
+  "description": "Based on the Brackets theme Skullomania",
   "keywords": [
     "syntax",
     "theme"
